Stuck on href + slider issue, wip

--- a/src/portfolio/components/main/_mainContent.scss
+++ b/src/portfolio/components/main/_mainContent.scss
@@ -6,18 +6,18 @@
   height: 100%;
   max-height: 76vh;
   overflow: visible;
-  &:hover {
-    cursor: grab;
-  }
-  &:active {
-    cursor: grabbing;
-  }
   &__track {
     display: flex;
     width: max-content;
     height: inherit;
     max-height: inherit;
     padding: 0 m.$box-model-viewport-x;
+    // &:hover {
+    //   cursor: grab;
+    // }
+    &:active {
+      cursor: grabbing;
+    }
     &.smoothen {
       transition: transform 360ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
     }
@@ -43,6 +43,12 @@
     display: block;
     height: inherit;
     max-height: inherit;
+    &:hover {
+      cursor: pointer;
+    }
+    &:active {
+      cursor: grabbing;
+    }
     & figure,
     & picture {
       display: contents;
